[EventTiming] keydown PerformanceEntry duration is always too long (waits for keyup event?) https://bugs.webkit.org/show_bug.cgi?id=300102 rdar://161911473

Reviewed by Ryan Reno.

LocalDOMWindowdispatchPendingEventTimingEntries() now assigns duration
to pending entries with nonzero duration, and doesn't overwrite
that value when queuing. Entries whose duration would round to zero
are assigned 1ms, avoiding being reassigned; this value is not exposed
to the user, as it is later rounded to zero.

Tests which verify this behavior were added; those introduce a
significant gap between the down and up events to make sure the
deferred down event had its duration set before the dispatch of
the up event:

* LayoutTests/imported/w3c/web-platform-tests/event-timing/gap-keydown-keyup.html
* LayoutTests/imported/w3c/web-platform-tests/event-timing/gap-pointerdown-pointerup.html

Unfortunately, WKTR is unable to properly send actions chains with
unpaired down/up events in several platforms, which required these
tests to be skipped a lot.

Canonical link: https://commits.webkit.org/302107@main